--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -6,7 +6,7 @@
         
         <div>
             
-            <h1><a href="{% url 'post_detail' pk=post.pk %">{{ post.title }}</a>}</h1>
+            <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
             <p>{{post.text |linebreaksbr}}</p>
             <p>Published: {{post.published_date}}. Written by {{post.author}}</p>
 
