--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,10 +10,17 @@
     </head>
 
     <body>
-    {% block content %}
+
+        <div class="page-header">
+            <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+            <h1><a href="/">Django Girls Blog</a></h1>
+        </div>
 
 
-    {% endblock %}
+        {% block content %}
+
+
+        {% endblock %}
 
     </body>
     </html>
