--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -6,14 +6,13 @@
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-        <title>Jacob Reilly Bridiging Coursework</title>
+        <title>Jacob Reilly</title>
     </head>
 
     <body>
 
         <div class="page-header">
-            <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-            <h1><a href="/">Django Girls Blog</a></h1>
+            <h1><a href="/">Jacob Reilly</a></h1>
         </div>
 
 
