Intitial CSS Design

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -12,14 +12,16 @@
     <body>
 
         <div class="page-header">
-            <h1><a href="/">Jacob Reilly</a></h1>
+            <h1 id="mainpage-name"><a href="/">Jacob Reilly</a></h1>
+            
+            
         </div>
 
-
+        <div class="page-content">
         {% block content %}
 
 
         {% endblock %}
-
+        </div>
     </body>
     </html>
