--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -5,9 +5,40 @@ p{
 }
 
 .page-header{
+    margin-top: -10px;
+    padding: 0;
+    height: 90px;
+    width:100%;
+    border:0;
+    
+    color: white;
+    font-family: ff-tisa-sans-web-pro, sans-serif;;
+    font-weight: 800;
+    background-color:black;
+    -webkit-box-align: center;
+    float:left;
+}
 
-    text-align: center;
-    color:#C25100;
-    font-family: 'Franklin Gothic Medium';
+#mainpage-name{
 
+    float:left;
+    margin: 10px;
+    text-decoration: none;
+
+}
+
+
+
+.page-content{
+
+    background-image: -webkit-linear-gradient(0deg, #766dff 0%, #88f3ff 100%);
+    height:100%;
+    margin-bottom: -40px;
+
+}
+
+
+
+body{
+    background-color: black;
 }
