--- a/blog/templates/blog/main_page.html
+++ b/blog/templates/blog/main_page.html
@@ -3,7 +3,11 @@
 
 {% block content %}
 
-    <img src="{% static 'profilepic.jpg' %}" alt="Italian Trulli">
+
+
+
+
+    <img class="profileimage" src="{% static 'profilepic.jpg' %}" alt="Italian Trulli">
 
 
 {% endblock %}
