--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -6,10 +6,11 @@ p{
 
 .page-header{
     margin-top: -10px;
-    padding: 0;
+    padding: 10px;
     height: 90px;
     width:100%;
     border:0;
+    margin-bottom: 20px;
     
     color: white;
     font-family: ff-tisa-sans-web-pro, sans-serif;;
@@ -19,21 +20,42 @@ p{
     float:left;
 }
 
-#mainpage-name{
+#mainpage-name a:visited, a:active, a:hover{
 
     float:left;
-    margin: 10px;
+    margin: 40px;
     text-decoration: none;
 
 }
 
 
 
-.page-content{
+.page-background{
 
     background-image: -webkit-linear-gradient(0deg, #766dff 0%, #88f3ff 100%);
     height:100%;
     margin-bottom: -40px;
+
+}
+
+.page-content{
+    background-color: #ffffff;
+    width : 90%;
+    height : 800px;
+    padding-left: 30px;
+    margin: auto;
+    margin-top : 10px;
+    border-radius: 25px;
+    box-shadow: 0px 20px 80px 0px rgba(153, 153, 153, 0.3);
+}
+
+.profie-image{
+
+    width:50%;
+    height:50%;
+    border-radius:25px;
+    margin : auto;
+
 
 }
 
