--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -17,11 +17,13 @@
             
         </div>
 
-        <div class="page-content">
-        {% block content %}
+        <div class="page-background">
+            <div class="page-content">
+                {% block content %}
 
 
-        {% endblock %}
+                {% endblock %}
+            </div>
         </div>
     </body>
     </html>
