CSS and Profile Pic Change

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -12,7 +12,7 @@
     <body>
 
         <div class="page-header">
-            <h1 id="mainpage-name"><a href="/">Jacob Reilly</a></h1>
+            <a href="/"><img src = "{% static 'Name.jpg' %}" class="header-name" style="height:75px;"></a>
             
             
         </div>
