--- a/blog/templates/blog/main_page.html
+++ b/blog/templates/blog/main_page.html
@@ -7,7 +7,7 @@
 
 
 
-    <img class="profileimage" src="{% static 'profilepic.jpg' %}" alt="Italian Trulli">
+    <img class="profileimage" src="{% static 'profilepic.jpg' %}" style = "height:300px; border-radius:25px" alt="Italian Trulli">
 
 
 {% endblock %}
