--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -10,21 +10,21 @@ p{
     height: 90px;
     width:100%;
     border:0;
-    margin-bottom: 20px;
-    
-    color: white;
-    font-family: ff-tisa-sans-web-pro, sans-serif;;
+      
+   
     font-weight: 800;
     background-color:black;
-    -webkit-box-align: center;
-    float:left;
+    
+    
 }
 
-#mainpage-name a:visited, a:active, a:hover{
+#header-name{
 
     float:left;
     margin: 40px;
     text-decoration: none;
+    height:2px;
+    
 
 }
 
@@ -33,18 +33,20 @@ p{
 .page-background{
 
     background-image: -webkit-linear-gradient(0deg, #766dff 0%, #88f3ff 100%);
-    height:100%;
-    margin-bottom: -40px;
+    flex: 1 1 auto;
+    margin-bottom: 40px;
+    padding-bottom: 20px;
 
 }
 
 .page-content{
     background-color: #ffffff;
     width : 90%;
-    height : 800px;
+    min-height: 800px;
+    height:auto;
     padding-left: 30px;
     margin: auto;
-    margin-top : 10px;
+    margin-top : 40px;
     border-radius: 25px;
     box-shadow: 0px 20px 80px 0px rgba(153, 153, 153, 0.3);
 }
