More Design Changes

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -12,7 +12,7 @@
     <body>
 
         <div class="page-header">
-            <a href="/"><img src = "{% static 'Name.jpg' %}" class="header-name" style="height:75px;"></a>
+            <a href="/"><img src = "{% static 'Name.jpg' %}" class="header-name" style="height:50px;"></a>
             
             
         </div>
@@ -25,5 +25,14 @@
                 {% endblock %}
             </div>
         </div>
+
+
+        <div class="footer">
+
+
+            <h6> ©Jacob Reilly 2020 </h6>
+
+        </div>
+
     </body>
     </html>
