--- a/blog/templates/blog/main_page.html
+++ b/blog/templates/blog/main_page.html
@@ -4,10 +4,16 @@
 {% block content %}
 
 
+    <img class="profile-image" src="{% static 'profilepic.jpg' %}" style = "height:700px; width:600px; border-radius:25px;float:left;" alt="Italian Trulli">
+
+    <h1 id="profile-name">Jacob Reilly</h1>
+    <h2 id="profile-occupation">Computer Science Student / Technology Degree Apprentice</h2>
+    <h3 id="profile-about">I am a Computer Science Student at the University of Birmingham studying with a technology degree apprentice for PWC.
+        As part of this apprenticeship, I am completing a normal Computer Science degree whilst also taking a couple of business/finance modules
+        and completing summer work placements as well as a year in industry with PWC in my 3rd year.</h3>
 
 
-
-    <img class="profileimage" src="{% static 'profilepic.jpg' %}" style = "height:300px; border-radius:25px" alt="Italian Trulli">
+   
 
 
 {% endblock %}
