--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -6,8 +6,8 @@ p{
 
 .page-header{
     margin-top: -10px;
-    padding: 10px;
-    height: 90px;
+    
+    height: 75px;
     width:100%;
     border:0;
       
@@ -18,10 +18,10 @@ p{
     
 }
 
-#header-name{
+.header-name{
 
     float:left;
-    margin: 40px;
+    margin: auto;
     text-decoration: none;
     height:2px;
     
@@ -34,30 +34,34 @@ p{
 
     background-image: -webkit-linear-gradient(0deg, #766dff 0%, #88f3ff 100%);
     flex: 1 1 auto;
-    margin-bottom: 40px;
+    margin-top:20px;
     padding-bottom: 20px;
+    padding-top: 20px;
 
 }
 
 .page-content{
     background-color: #ffffff;
-    width : 90%;
-    min-height: 800px;
-    height:auto;
-    padding-left: 30px;
-    margin: auto;
+    width : 75%;
+    min-height: 750px;
+    height:auto;  
+    margin-left: auto;
+    margin-right: auto;      
     margin-top : 40px;
+    text-align:center;
     border-radius: 25px;
     box-shadow: 0px 20px 80px 0px rgba(153, 153, 153, 0.3);
+    padding: 25px;
 }
 
-.profie-image{
+.profile-image{
 
     width:50%;
     height:50%;
     border-radius:25px;
-    margin : auto;
-
+    margin-left : auto;
+    margin-right : auto;
+   float:left;
 
 }
 
@@ -65,4 +69,55 @@ p{
 
 body{
     background-color: black;
+    font-family: "Roboto", sans-serif;
+}
+
+h6{
+
+    color:#ffffff;
+    text-align: center;
+    font-size: 20px;
+    padding:auto;
+    margin:auto;
+
+}
+
+#profile-name{
+
+    font-size: 50px;
+    font-family: "Roboto", sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2.1px;
+    font-weight: normal;
+    margin-bottom: 12px;
+    color: #222222;
+
+
+
+}
+
+
+#profile-occupation{
+
+    font-size: 15px;
+    font-family: "Roboto", sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2.1px;
+    font-weight: normal;
+    margin-bottom: 12px;
+    color: #222222;
+
+}
+
+#profile-about{
+
+    font-size: 15px;
+    font-family: "Roboto", sans-serif;    
+    font-weight: normal;
+    margin-bottom: 6px;
+    color: #777777;
+
+
+
+
 }
