--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -7,7 +7,7 @@ p{
 .page-header{
     margin-top: -10px;
     
-    height: 75px;
+    height: 50px;
     width:100%;
     border:0;
       
@@ -28,6 +28,20 @@ p{
 
 }
 
+.page-name{
+
+    font-size: 50px;
+    font-family: "Roboto", sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2.1px;
+    font-weight: normal;
+    color:#ffffff;
+    margin:auto;
+    padding-top:10px;
+    text-decoration: none;
+    float:left;
+
+}
 
 
 .page-background{
@@ -107,6 +121,8 @@ h6{
     margin-bottom: 12px;
     color: #222222;
 
+
+
 }
 
 #profile-about{
@@ -117,7 +133,55 @@ h6{
     margin-bottom: 6px;
     color: #777777;
 
+}
 
+.icon{
+
+    height:35px;
+    position:relative;
+    margin-top: 10px;
+   
+}
+a, a:hover{
+    text-decoration: none;
+}
+
+.post-list{
+
+    text-align:left;
 
 
 }
+
+.navbar{
+
+    float:right;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+  
+}
+
+.navbar li{
+
+    float:right;
+    display:block;
+
+}
+
+.navbar li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+
+    font-size: 15px;
+    font-family: "Roboto", sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2.1px;
+    font-weight: normal;
+    
+
+  }
