--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -12,8 +12,16 @@
     <body>
 
         <div class="page-header">
-            <a href="/"><img src = "{% static 'Name.jpg' %}" class="header-name" style="height:50px;"></a>
-            
+            <!--<a href="/"><img src = "{% static 'Name.jpg' %}" class="header-name" style="height:50px;"></a>-->
+            <a href="/"><h1 class="page-name">Jacob Reilly</h1></a>
+            <ul class="navbar">
+
+                <li><a href="">Login</a></li>
+                <li><a href="">CV</a></li>
+                <li><a href="/posts">Blog</a></li>
+                <li><a href="/">Home</a></li>
+
+            </ul>
             
         </div>
 
