--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -4,7 +4,7 @@
     {% for post in posts %}
         
         
-        <div>
+        <div class="post-list">
             
             <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
             <p>{{post.text |linebreaksbr}}</p>
