--- a/blog/templates/blog/main_page.html
+++ b/blog/templates/blog/main_page.html
@@ -15,7 +15,7 @@
 
         <li><a href=""><img class="icon" src="{% static 'linkedin.png' %}"><h3>Linkedin</h3></a></li>
         <li><a href=""><img class="icon" src="{% static 'github.svg' %}"><h3>Github</h3></a></li>
-        <li><a href=""><img class="icon" src="{% static 'cv.png' %}"><h3>CV</h3></a></li>
+        <li><a href="/CV"><img class="icon" src="{% static 'cv.png' %}"><h3>CV</h3></a></li>
 
 
     </ul>
