--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -17,7 +17,7 @@
             <ul class="navbar">
 
                 <li><a href="">Login</a></li>
-                <li><a href="">CV</a></li>
+                <li><a href="/CV">CV</a></li>
                 <li><a href="/posts">Blog</a></li>
                 <li><a href="/">Home</a></li>
 
