--- a/blog/templates/blog/main_page.html
+++ b/blog/templates/blog/main_page.html
@@ -13,8 +13,8 @@
         and completing summer work placements as well as a year in industry with PWC in my 3rd year.</h3>
     <ul>
 
-        <li><a href=""><img class="icon" src="{% static 'linkedin.png' %}"><h3>Linkedin</h3></a></li>
-        <li><a href=""><img class="icon" src="{% static 'github.svg' %}"><h3>Github</h3></a></li>
+        <li><a href="https://www.linkedin.com/in/jacob-reilly-8437031a3/"><img class="icon" src="{% static 'linkedin.png' %}"><h3>Linkedin</h3></a></li>
+        <li><a href="https://github.com/Reilly910"><img class="icon" src="{% static 'github.svg' %}"><h3>Github</h3></a></li>
         <li><a href="/CV"><img class="icon" src="{% static 'cv.png' %}"><h3>CV</h3></a></li>
 
 
