--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -15,8 +15,12 @@
             <!--<a href="/"><img src = "{% static 'Name.jpg' %}" class="header-name" style="height:50px;"></a>-->
             <a href="/"><h1 class="page-name">Jacob Reilly</h1></a>
             <ul class="navbar">
-
-                <li><a href="">Login</a></li>
+                {% if user.is_authenticated %}
+                    <li><a href="/accounts/logout">Log Out</a></li>
+                {%else%}
+                    <li><a href="/accounts/login">Login</a></li>
+                {%endif%}
+                
                 <li><a href="/CV">CV</a></li>
                 <li><a href="/posts">Blog</a></li>
                 <li><a href="/">Home</a></li>
