Added Admin View

--- a/blog/templates/blog/main_page.html
+++ b/blog/templates/blog/main_page.html
@@ -11,7 +11,7 @@
     <h3 id="profile-about">I am a Computer Science Student at the University of Birmingham studying with a technology degree apprentice for PWC.
         As part of this apprenticeship, I am completing a normal Computer Science degree whilst also taking a couple of business/finance modules
         and completing summer work placements as well as a year in industry with PWC in my 3rd year.</h3>
-    <ul>
+    <ul class="icon-links">
 
         <li><a href="https://www.linkedin.com/in/jacob-reilly-8437031a3/"><img class="icon" src="{% static 'linkedin.png' %}"><h3>Linkedin</h3></a></li>
         <li><a href="https://github.com/Reilly910"><img class="icon" src="{% static 'github.svg' %}"><h3>Github</h3></a></li>
