--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -217,3 +217,80 @@ a, a:hover{
     font-weight: normal;
 
   }
+
+  .post-comments{
+
+    height:30px;
+    float:right;
+
+  }
+
+  .comment-number{
+
+    float:right;
+    color:black;
+
+  }
+
+
+  .login{
+
+    border:none;
+    box-shadow: 0px 20px 80px 0px rgba(153, 153, 153, 0.3);
+    font-size: 15px;
+    font-family: "Roboto", sans-serif;   
+    color:green;
+    font-weight: normal;
+    text-transform: uppercase;
+    
+  }
+
+  .detail-date{
+
+    float:right;
+    margin-top: -30px;
+    font-size: 12px;
+  }
+
+  .detail-title{
+
+    text-align:center;
+    margin-bottom: 30px;
+  }
+
+  .detail-text{
+
+    text-align:left;
+    margin-left:10px;
+    font-weight:100;
+
+
+  }
+
+  .post-detail{
+
+    color:#777777;
+
+  }
+
+  .comment-header{
+
+    text-align: left;
+    font-size:15px;
+    text-decoration: underline;
+
+  }
+
+
+  .detail-comment{
+
+    margin-left:10px;
+    text-align:left;
+  }
+
+  .detail-comment-date{
+
+    font-size:12px;
+
+
+  }
