--- a/blog/templates/registration/login.html
+++ b/blog/templates/registration/login.html
@@ -7,7 +7,7 @@
 
     <form method="post" action="{% url 'login' %}">
     {% csrf_token %}
-        <table>
+        <table class="login">
         <tr>
             <td>{{ form.username.label_tag }}</td>
             <td>{{ form.username }}</td>
@@ -18,7 +18,7 @@
         </tr>
         </table>
 
-        <input type="submit" value="login" />
+        <input type="submit" value="Login" style="float:left;" />
         <input type="hidden" name="next" value="{{ next }}" />
     </form>
 {% endblock %}
